// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rename an object metadata with morph relation should succeed should handle morph field related index update after an target object name update 2`] = `
{
  "indexFieldMetadataList": [
    {
      "createdAt": Any<String>,
      "fieldMetadataId": "6362af37-1db1-44db-b082-9e9030e40079",
      "id": Any<String>,
      "order": 0,
      "updatedAt": Any<String>,
    },
  ],
  "indexType": "BTREE",
  "isCustom": true,
  "isUnique": false,
  "name": "IDX_d46ee05346f12228875612c7a2a",
}
`;

exports[`Rename an object metadata with morph relation should succeed should handle morph field related index update after an target object name update 3`] = `
{
  "indexFieldMetadataList": [
    {
      "createdAt": Any<String>,
      "fieldMetadataId": "b89c6c4f-c2a9-4ec9-bba8-454f1b615d19",
      "id": Any<String>,
      "order": 0,
      "updatedAt": Any<String>,
    },
  ],
  "indexType": "BTREE",
  "isCustom": true,
  "isUnique": false,
  "name": "IDX_270c22872e92d429bb4f07a15dd",
}
`;
